# eta-ffi-nolambda

./: ffi-eta-test.cabal
ffi-eta-test/: Main.hs
java/: FFITest.java
