name:                ffi-eta-test
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Ashley Towns
maintainer:          mail@ashleytowns.id.au
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable ffi-eta-test
  hs-source-dirs: ffi-eta-test
  main-is: Main.hs
  default-language:    Haskell2010
  java-sources:   java/FFITest.java
  build-depends:  base >=4.8 && <4.9
